Correcting css after merge+doing more views in quotation

--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -77,11 +77,15 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     background-color: var(--ar-primary);
     position: relative;
     cursor: pointer;
-    border: 3px solid transparent;
+    border: 1px solid var(--ar-secondary);
 }
 
-:host ::ng-deep .card.selected {
+:host ::ng-deep .card.selected, .card:hover {
     border: 3px solid var(--ar-secondary);
+}
+
+:host ::ng-deep .card:hover {
+    opacity: 0.9;
 }
 
 :host ::ng-deep .pill {
