--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -18,7 +18,7 @@
       <!-- Afficher les cartes avec ngFor -->
       <div *ngFor="let asso of quotation.assoAffaireOrders; let indexAsso = index;" class="col-6  my-2"
         [ngClass]="{'col-sm-6 col-lg-4' : quotation.assoAffaireOrders.length>1}">
-        <div class="card rounded-1 d-flex flex-column h-100 p-4 "
+        <div class="white-card card rounded-1 d-flex flex-column h-100 p-4 "
           [ngClass]="{'selected': selectedAssoIndex == indexAsso}"
           (click)="selectCard(indexAsso);$event.stopPropagation()">
           <div class="row d-flex flex-row align-items-center">
