correcting all the absent links

--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -43,11 +43,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img class="d-block mt-1 mt-sm-0 mb-4" [src]="annoncesLegalesPicto" />
-            <h3 class="h4">Annonces légales</h3>
+            <h3 class="h4" routerLink="/services/announcement" style="cursor: pointer;">Annonces légales</h3>
             <p class="mb-0">Toutes les annonces légales, sur tout le territoire et sur tous les supports.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openAnnouncements($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -60,11 +60,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img class="d-block mt-1 mt-sm-0 mb-4" [src]="formalitesPicto" />
-            <h3 class="h4">Formalité légales</h3>
+            <h3 class="h4" routerLink="/services/formality" style="cursor: pointer;">Formalité légales</h3>
             <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openFormality($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -79,11 +79,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img class="d-block mt-1 mt-sm-0 mb-4" [src]="apostilleLegaPicto" />
-            <h3 class="h4">Apostille & Légalisation</h3>
+            <h3 class="h4" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation</h3>
             <p class="mb-0">Authentification rapide et conforme de vos documents valable à internationale.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openApostille($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -96,11 +96,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img class="d-block mt-1 mt-sm-0 mb-4" [src]="domiciliationPicto" />
-            <h3 class="h4">Domiciliation</h3>
+            <h3 class="h4" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation</h3>
             <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openDomiciliation($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -113,11 +113,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img class="d-block mt-1 mt-sm-0 mb-4" [src]="fournitureDocumentsPicto" />
-            <h3 class="h4">Fourniture de documents</h3>
+            <h3 class="h4" routerLink="/services/document" style="cursor: pointer;">Fourniture de documents</h3>
             <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openDocument($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
