--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -234,11 +234,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Formalite.svg" alt="Icon">
-            <h3 class="h4 text-white">Formalité légale</h3>
+            <h3 class="h4 text-white" routerLink="/services/formality" style="cursor: pointer;">Formalité légale</h3>
             <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openFormality($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -250,12 +250,13 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4 text-white">Apostille & Légalisation</h3>
+            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation
+            </h3>
             <p class="mb-0">Authentification et certification rapide et conforme de vos documents valables à
               l’international.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openApostille($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -269,11 +270,11 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
-            <h3 class="h4 text-white">Domiciliation</h3>
+            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation</h3>
             <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openDomiciliation($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -285,11 +286,12 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Fourniture_documents.svg" alt="Icon">
-            <h3 class="h4 text-white">Fourniture de documents</h3>
+            <h3 class="h4 text-white" routerLink="/services/document" style="cursor: pointer;">Fourniture de documents
+            </h3>
             <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openDocument($event)"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
