fixing bugs view

--- a/client-myjss/src/app/modules/my-services/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/document/document.component.html
@@ -139,20 +139,35 @@
   </div>
 </section>
 
-<section class=" py-5">
-  <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5 ">
-    <div class=" text-center">
+<section class="py-5">
+  <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
+    <div class="text-center">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Nos services</h2>
       <p>Nous proposons une large gamme de services de formalités, adaptés à vos besoins pour simplifier vos démarches
         administratives.</p>
     </div>
     <div
-      class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3 justify-content-center align-items-center">
-      <div class="col-lg-5">
-        <div class="card h-100 border-0 rounded-5">
-          <div class="card-body pb-3">
+      class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 pb-xl-2 pb-xxl-3 justify-content-center align-items-stretch">
+      <div class="col-lg-5 d-flex pt-3 pt-xl-0">
+        <div class="card h-100 border-0 rounded-5 w-100">
+          <div class="card-body pb-3 px-3">
+            <img class="d-block mt-1 mt-sm-0 mb-4" src="assets/pictos/Annonces.svg" />
+            <h3 class="h4">Annonces légales</h3>
+            <p class="mb-0">Toutes les annonces légales, sur tout le territoire et sur tous les supports.</p>
+          </div>
+          <div class="card-footer border-0 pt-3 mb-3">
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
+              aria-label="Learn more">
+              <i class="ai-arrow-right"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 d-flex pt-3 pt-xl-0">
+        <div class="card h-100 border-0 rounded-5 w-100">
+          <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Formalite.svg" alt="Icon">
-            <h3 class="h4 text-white">Annonces légales</h3>
+            <h3 class="h4 text-white">Formalité légale</h3>
             <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -163,12 +178,15 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="col-lg-5">
-        <div class="card h-100 border-0 rounded-5">
-          <div class="card-body pb-3">
+    <div
+      class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 pb-xl-2 pb-xxl-3 justify-content-center align-items-stretch">
+      <div class="col-lg-5 d-flex pt-3 pt-xl-0">
+        <div class="card h-100 border-0 rounded-5 w-100">
+          <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4 text-white">Formalités légales</h3>
+            <h3 class="h4 text-white">Apostille & Légalisation</h3>
             <p class="mb-0">Authentification et certification rapide et conforme de vos documents valables à
               l’international.</p>
           </div>
@@ -180,31 +198,12 @@
           </div>
         </div>
       </div>
-    </div>
-    <div
-      class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3 justify-content-center align-items-center">
-      <div class="col-lg-5">
-        <div class="card h-100 border-0 rounded-5">
-          <div class="card-body pb-3">
+      <div class="col-lg-5 d-flex pt-3 pt-xl-0">
+        <div class="card h-100 border-0 rounded-5 w-100">
+          <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
             <h3 class="h4 text-white">Domiciliation</h3>
             <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
-          </div>
-          <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
-              aria-label="Learn more">
-              <i class="ai-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-5">
-        <div class="card h-100 border-0 rounded-5">
-          <div class="card-body pb-3">
-            <img src="assets/img/icons/Fourniture_documents.svg" alt="Icon">
-            <h3 class="h4 text-white">Fourniture de documents</h3>
-            <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
             <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle stretched-link" href="#"
