--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -93,16 +93,16 @@
             <img [src]="logoJss" />
           </a>
           <div class="col d-flex align-items-center me-2">
-            <a class="btn btn-icon btn-sm btn-outline-primary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3" href="#"
-              aria-label="LinkedIn">
+            <a class="btn btn-icon btn-sm btn-outline-primary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3"
+              href="https://www.linkedin.com/company/journal-special-des-societes" aria-label="LinkedIn">
               <i class="ai-linkedin"></i>
             </a>
-            <a class="btn btn-icon btn-sm btn-outline-primary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3" href="#"
-              aria-label="Facebook">
+            <a class="btn btn-icon btn-sm btn-outline-primary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
+              href="https://www.facebook.com/Journal.Special.des.Societes" aria-label="Facebook">
               <i class="ai-facebook"></i>
             </a>
             <a class="btn btn-icon btn-sm btn-outline-primary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="#" aria-label="Instagram">
+              href="https://www.instagram.com/journalspecialdessocietes/" aria-label="Instagram">
               <i class="ai-instagram"></i>
             </a>
           </div>
