--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -94,15 +94,15 @@
           </a>
           <div class="col d-flex align-items-center me-2">
             <a class="btn btn-icon btn-sm btn-outline-primary btn-linkedin rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="https://www.linkedin.com/company/journal-special-des-societes" aria-label="LinkedIn">
+              (click)="openLinkedin()" aria-label="LinkedIn">
               <i class="ai-linkedin"></i>
             </a>
             <a class="btn btn-icon btn-sm btn-outline-primary btn-facebook rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="https://www.facebook.com/Journal.Special.des.Societes" aria-label="Facebook">
+              (click)="openFacebook()" aria-label="Facebook">
               <i class="ai-facebook"></i>
             </a>
             <a class="btn btn-icon btn-sm btn-outline-primary btn-instagram rounded-circle mx-2 ms-sm-0 me-sm-3"
-              href="https://www.instagram.com/journalspecialdessocietes/" aria-label="Instagram">
+              (click)="openInstagram()" aria-label="Instagram">
               <i class="ai-instagram"></i>
             </a>
           </div>
