--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -356,6 +356,10 @@
               [isDisplayLabel]="false" (onFormChange)="searchForSecondPosts()" [icon]="'search'"
               class="btn-search col"></generic-input>
 
+            <div *ngIf="isLoading2" class="col-1 d-flex spinner-border rounded-circle text-dark me-2" role="status">
+              <span class="visually-hidden">chargement...</span>
+            </div>
+
             <button *ngIf="secondSearchText" class="col-1 btn btn-link btn-search" (click)="clearSecondSearch()">
               <i class="ai ai-cross-alt"></i>
             </button>
